# eink-weather-clock

./: CHANGELOG.md  CMakeLists.txt  README.md  sdkconfig
3d/: eink_weather_clock_case_back.stl  eink_weather_clock_case_front.stl  eink_weather_clock_case_mid.stl
docs/: eink_weather_clock.fzz
main/: CMakeLists.txt  Kconfig  atariST_16.c  cflow0.dot  cflow1.dot  cscope.out  eink_weather_clock.c  flipclock.c  flipclock_110.c  flipclock_24.c  flipclock_48.c  flipclock_88.c  tasks_config.h  wifi.c  wifi.h
main/assets/: icon_01.c  icon_02.c  icon_03.c  icon_04.c  icon_09.c  icon_10.c  icon_11.c  icon_13.c  icon_50.c  wait.c
main/display/: display.c  display.h
main/drivers/Config/: DEV_Config.c  DEV_Config.h
main/drivers/EPD_2in9_V2/: EPD_2in9_V2.c  EPD_2in9_V2.h
main/drivers/spi/: spi.c  spi.h
main/fonts/: flipclock.h  fonts.h
main/gui/: CMakeLists.txt  gui.c  gui.h
main/gui/gui_control/: gui_control_main.c  gui_control_main.h
main/gui/gui_views/: gui_view_main.c  gui_view_main.h
main/hal/: CMakeLists.txt
main/hal/GUI/: GUI_Paint.c  GUI_Paint.h
main/hal/e_ink/: e_ink.c  e_ink.h
main/http/: http.c  http.h
main/json/: json.c  json.h
main/time/: time_tracker.c  time_tracker.h
