idf_component_register(SRCS
        "drivers/Config/DEV_Config.c"
        "drivers/EPD_2in9_V2/EPD_2in9_V2.c"
        "drivers/spi/spi.c"
        "display/display.c"
        "gui/gui.c"
        "gui/gui_views/gui_view_main.c"
        "gui/gui_control/gui_control_main.c"
        "hal/GUI/GUI_Paint.c"
        "hal/e_ink/e_ink.c"
        "time/time_tracker.c"
        "http/http.c"
        "json/json.c"
        "wifi.c"
        "flipclock_110.c"
        "flipclock_48.c"
        "flipclock_24.c"
        "atariST_16.c"
        "eink_weather_clock.c"
        "assets/icon_01.c"
        "assets/icon_02.c"
        "assets/icon_03.c"
        "assets/icon_04.c"
        "assets/icon_09.c"
        "assets/icon_10.c"
        "assets/icon_11.c"
        "assets/icon_13.c"
        "assets/icon_50.c"
        INCLUDE_DIRS
        ".")